[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/images/spriteAsset.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/SHOWG.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/playerUI/tryAgain.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 5
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "popIn"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("container:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 0.594604, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1050 ), Vector2( 0, 1000 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "popOut"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("container:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 0.435275, 1, 0.594604 ),
"update": 0,
"values": [ Vector2( 0, 1000 ), Vector2( 0, 1050 ), Vector2( 0, 0 ) ]
}

[node name="tryAgain" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="Sprite" parent="container"]
modulate = Color( 0.52549, 0.85098, 0.858824, 1 )
position = Vector2( 990, -450 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 479, 31, 517, 435 )

[node name="o" type="Sprite" parent="container"]
modulate = Color( 0, 1, 0.0627451, 1 )
position = Vector2( 857.253, -308.003 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 893, 589, 98, 92 )

[node name="x" type="Sprite" parent="container"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 1125.47, -309.543 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 883, 687, 104, 93 )

[node name="oBtn" type="Button" parent="container"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 774.0
margin_top = -400.0
margin_right = 955.0
margin_bottom = -222.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="xBtn" type="Button" parent="container"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 1030.0
margin_top = -401.0
margin_right = 1217.0
margin_bottom = -226.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="Label" parent="container"]
margin_left = 743.189
margin_top = -599.986
margin_right = 1259.19
margin_bottom = -498.986
custom_fonts/font = SubResource( 1 )
text = "Try again ?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/popIn = SubResource( 2 )
anims/popOut = SubResource( 3 )
[connection signal="pressed" from="container/oBtn" to="." method="_on_oBtn_pressed"]
[connection signal="pressed" from="container/xBtn" to="." method="_on_xBtn_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
